--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,3 +1,20 @@
-<p>
-  main works!
-</p>
+<!DOCTYPE html>
+<html lang="en-US" dir="ltr">
+	<head>
+		<title>Login</title>
+		<meta charset="utf-8">
+		<meta name="author" content="Thomas Liang (zl34)">
+	</head>
+  <body>
+	<div class = "miniProfile">
+    <nav>
+      <a routerLink = "/auth" routerLinkActive = "active"> Log out </a>
+    </nav>
+    <nav>
+      <a routerLink = "/profile" routerLinkActive = "profile"> Profile </a>
+    </nav>
+    <!-- <img src="assets/Images/avatar.png" alt="">
+    <img src="https://picsum.photos/300/300/?image=5"> -->
+  </div>
+</body>
+</html>
