--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,4 +1,10 @@
-<div class = "AuthComponent">
-  <app-registration></app-registration>
-  <app-login></app-login>
+<div class = "auth">
+  <div class = "left">
+      <app-registration></app-registration>
+  </div>
+  <div class = "right">
+      <app-login></app-login>
+  </div>
+
+
 </div>
