--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="author" content="Thomas Liang (zl34)">
 	</head>
-    <form (ngSubmit)="onSubmit()" [formGroup]="registrationForm" class = "authForm">
+    <form (ngSubmit)="onSubmit()" [formGroup]="registrationForm" class = "registrationForm">
       <div class="form-group">
       Account name<br>
 			<input class="form-control" type = "text" formControlName="accountName"><br>
